# xaitk-jatic

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.gitlab-ci/: .gitlab-build.yml  .gitlab-container.yml  .gitlab-docs.yml  .gitlab-quality.yml  .gitlab-security.yml  .gitlab-shared.yml  .gitlab-test.yml
.gitlab-ci/pipelines/: .gitlab-container-aukus.yml
demos/: demo_utils.py  increment0-demo.ipynb  increment1-demo.ipynb
docker_scripts/: docker_entrypoint.py
docs/: conf.py  containers.rst  index.rst  installation.rst  jatic.rst  jatic_toolbox.rst  platform_reflections.rst  release_notes.rst  release_process.rst  review_process.rst  sphinx_server.py  utils.rst
docs/containers/: aukus.rst
docs/examples/: README.md  jatic-image-classifier-protocol.ipynb  jatic-object-detector-protocol.ipynb  jatic-perturbations.ipynb
docs/examples/armory/: armory_smqtk_detect_objects.py  xaitk-armory.ipynb
docs/examples/gradio/: gr_component_state.py  model-comparison.ipynb  xaitk-gradio.ipynb
docs/examples/huggingface/: benchmarking.ipynb  xaitk-accelerate.ipynb  xaitk-huggingface.ipynb
docs/examples/lightning/: benchmarking.ipynb  xaitk-lightning.ipynb
docs/examples/mlflow/: MNIST_MLFlow_scikit_saliency.ipynb
docs/examples/shared_interest/: xaitk-shared_interest.ipynb
docs/examples/shared_interest/data/input/annotations/0009/: ILSVRC2012_val_00036749.xml
docs/examples/shared_interest/data/input/annotations/0020/: ILSVRC2012_val_00024643.xml
docs/examples/shared_interest/data/input/annotations/0022/: ILSVRC2012_val_00039859.xml
docs/examples/shared_interest/data/input/annotations/0243/: ILSVRC2012_val_00000975.xml  ILSVRC2012_val_00002516.xml  ILSVRC2012_val_00022201.xml  ILSVRC2012_val_00036859.xml
docs/miscellaneous/: creating_public_release_request.rst
docs/platform_reflections/: jatic.rst  jatic_toolbox.rst  scalability.rst  tracking.rst  visualization.rst
docs/release_notes/: pending_release.rst  v0.2.0.rst  v0.3.0.rst  v0.4.0.rst  v0.4.1.rst  v0.4.2.rst  v0.4.3.rst  v0.5.0.rst  v0.5.1.rst  v0.6.0.rst  v0.7.0.rst  v0.8.0.rst  v0.8.1.rst
docs/release_notes/pending_release/: 220-compare-known-snapshots.rst  277-fix-colab-issues.rst  278-update-maite.rst  pending_release.rst  update-maite.rst
docs/releasing/: release_notes.rst  release_process.rst
examples/: jatic-image-classifier-protocol.ipynb  jatic-object-detector-protocol.ipynb  jatic-perturbations.ipynb
examples/armory/: armory_smqtk_detect_objects.py  xaitk-armory.ipynb
examples/armory/data/saved_models/: carla_rgb_weights_eval5.pt  carla_rgb_weights_eval5.pt.REMOVED.git-id
examples/gradio/: gr_component_state.py  model-comparison.ipynb  xaitk-gradio.ipynb
examples/huggingface/: benchmarking.ipynb  huggingface.ipynb  xaitk-accelerate.ipynb  xaitk-huggingface.ipynb
examples/jatic_toolbox/: jatic-image-classifier-protocol.ipynb  jatic-object-detector-protocol.ipynb  jatic-perturbations.ipynb
examples/lightning/: benchmarking.ipynb  predict-step-xaitk-lightning.ipynb  xaitk-lightning.ipynb
examples/mlflow/: MNIST_MLFlow_scikit_saliency.ipynb  MNIST_scikit_saliency.ipynb
examples/shared_interest/: xaitk-shared_interest.ipynb
examples/shared_interest/data/input/annotations/0007/: ILSVRC2012_val_00023551.xml
examples/shared_interest/data/input/annotations/0009/: ILSVRC2012_val_00036749.xml
examples/shared_interest/data/input/annotations/0243/: ILSVRC2012_val_00000975.xml  ILSVRC2012_val_00002317.xml  ILSVRC2012_val_00002516.xml  ILSVRC2012_val_00002614.xml  ILSVRC2012_val_00003022.xml  ILSVRC2012_val_00003968.xml  ILSVRC2012_val_00004056.xml  ILSVRC2012_val_00004579.xml  ILSVRC2012_val_00004963.xml  ILSVRC2012_val_00007190.xml  ILSVRC2012_val_00007219.xml  ILSVRC2012_val_00007319.xml  ILSVRC2012_val_00008003.xml  ILSVRC2012_val_00008061.xml  ILSVRC2012_val_00009039.xml  ILSVRC2012_val_00009175.xml  ILSVRC2012_val_00010709.xml  ILSVRC2012_val_00011349.xml  ILSVRC2012_val_00014526.xml  ILSVRC2012_val_00014755.xml  ILSVRC2012_val_00015657.xml  ILSVRC2012_val_00016693.xml  ILSVRC2012_val_00017075.xml  ILSVRC2012_val_00017112.xml  ILSVRC2012_val_00017599.xml  ILSVRC2012_val_00020989.xml  ILSVRC2012_val_00022776.xml  ILSVRC2012_val_00023105.xml  ILSVRC2012_val_00023294.xml  ILSVRC2012_val_00025180.xml  ILSVRC2012_val_00025536.xml  ILSVRC2012_val_00026027.xml  ILSVRC2012_val_00026154.xml  ILSVRC2012_val_00026273.xml  ILSVRC2012_val_00029363.xml  ILSVRC2012_val_00031594.xml  ILSVRC2012_val_00035569.xml  ILSVRC2012_val_00036844.xml  ILSVRC2012_val_00037811.xml  ILSVRC2012_val_00038455.xml  (+8 more)
examples/shared_interest/data/input/annotations/0283/: ILSVRC2012_val_00016354.xml
scripts/: update_release_notes.sh
src/xaitk_jatic/: __init__.py
src/xaitk_jatic/interop/: __init__.py
src/xaitk_jatic/interop/image_classification/: __init__.py  model.py
src/xaitk_jatic/interop/object_detection/: __init__.py  dataset.py  model.py
src/xaitk_jatic/utils/: __init__.py  sal_on_dets.py
tests/: test_placeholder.py
tests/data/: image_metadata.json  maite_config.json
tests/examples/: test_notebooks.py
tests/interop/: test_jatic_image_classifier.py  test_jatic_object_detector.py
tests/interop/image_classification/: test_model.py
tests/interop/image_classification/__snapshots__/: test_model.ambr
tests/interop/object_detection/: test_dataset.py  test_model.py
tests/interop/object_detection/__snapshots__/: test_model.ambr
tests/utils/: test_bbox_transformer.py  test_sal_on_coco_dets.py  test_sal_on_coco_dets_cli.py  test_sal_on_dets.py
xaitk_cdao/: __init__.py
xaitk_cdao/interop/: bbox_transformer.py  image_classification.py  object_detection.py  preprocessor.py
xaitk_cdao/interop/jatic_toolbox/: image_classification.py  object_detection.py
xaitk_cdao/utils/: data_typing.py  sal_on_coco_dets.py
xaitk_jatic/interop/: object_detection.py
xaitk_jatic/interop/image_classification/: model.py
xaitk_jatic/interop/object_detection/: model.py
