[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

###############################################################################
[tool.poetry]
name = "xaitk-jatic"
# REMEMBER: `distutils.version.*Version` types can be used to compare versions
# from strings like this.
# This package prefers to use the strict numbering standard when possible.
version = "0.1.0"
description = """\
    Integration package to support interfacing, implementation and example \
    needs for the JATIC."""
authors = ["Kitware, Inc. <xaitk@kitware.com>"]
readme = "README.md"
packages = [{include = "xaitk_jatic"}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.dependencies]
python = "^3.8.1"
xaitk-saliency = ">=0.8.2"
maite = "^0.5.0"
setuptools = ">=65.6.3"
scipy = [
    {version = "<1.11.1", python = "~3.8.1"}, # Can't satisfy CVE-2023-25399 because it is too restrictive
    {version = ">=1.10.0", python = ">=3.9"}
]
# Python capped to <3.13 because of:
# https://stackoverflow.com/questions/77431252/why-doesnt-poetry-select-the-good-version-of-my-dependency
numpy = [
    {version = ">=1.22,<1.25", python = "~3.8"}, # CVE-2021-34141
    {version = ">=1.22,^1.25", python = ">=3.9,<3.12" }, # CVE-2021-34141
    {version = "^1.26", python = ">=3.12,<3.13" } # numpy==1.26 is the first release supporting python 3.12
]
# Notebook extras support (duplicated in dev group for "always on")
jupyter = { version = ">=1.0.0", optional = true }

[tool.poetry.extras]
notebooks = [ "jupyter" ]

[tool.poetry.group.dev.dependencies]
maite = { version = "^0.5.0", extras = ["test"] }
# Linting
flake8 = ">=6"
flake8-mutable = ">=1.2.0"
# Type checking
mypy = ">=0.991"
types-setuptools = ">=65.6.0.1"
# Testing
coverage = ">=6.5.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
# Jupyter notebook testing
jupyter = ">=1.0.0"
papermill = ">=2.4.0"
# Docs
Sphinx = ">=5.3.0"
sphinx-rtd-theme = ">=1.1.1"
sphinx-prompt = ">=1.5.0"
livereload = ">=2.6.3"
# Utility
ipython = ">=8.6.0"

[tool.poetry.scripts]

[tool.poetry.plugins."smqtk_plugins"]


###############################################################################
[tool.pytest.ini_options]
addopts = [
    "-lv",                      # Show local in trace-backs.
    "--doctest-modules",        # Increased verbosity.
    "--tb=long",                # Trace-back print mode.
    "--cov=./xaitk_jatic",       # Cover our package specifically
    "--cov=./tests",            # Also cover our tests for dead spots
    "--cov-report=term",        # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
]
testpaths = [
    "tests",
    "xaitk_jatic",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
