# :auto build-system:
[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"
# :auto build-system:

# :auto package-meta:
[tool.poetry]
name = "xaitk-jatic"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "xaitk_jatic", from="src"}]
documentation = "https://xaitk-jatic.readthedocs.io/"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
# :auto package-meta:
# package-specific meta, don't put this in "generated package-meta"
authors = ["Kitware, Inc. <xaitk@kitware.com>"]
version = "0.3.0"
description = """\
    Integration package to support interfacing, implementation and example \
    needs for the JATIC."""

[tool.poetry.dependencies]
# :auto python-version:
python = "^3.9"
# :auto python-version:

xaitk-saliency = ">=0.8.3"
maite = "^0.6.0"
setuptools = ">=65.6.3"
scipy = ">=1.10.0"  # CVE-2023-25399
# Python capped to <3.13 because of:
# https://stackoverflow.com/questions/77431252/why-doesnt-poetry-select-the-good-version-of-my-dependency
numpy = [
    {version = ">=1.22,<2.0", python = "<3.12" }, # CVE-2021-34141
    {version = "^1.26", python = ">=3.12,<3.13" } # numpy==1.26 is the first release supporting python 3.12
]

# Notebook extras support (duplicated in dev group for "always on")
# click = { version = ">=8.0.3", optional = true }
# notebook = { version = ">=7.0.7", optional = true }
# Optionals for "tools" extra"
kwcoco = { version = ">=0.2.18", optional = true}
matplotlib = { version=">=3.4.1", optional = true }
# Optional for Docker container
transformers = {version = "^4.42.3", optional = true}
timm = {version = "^1.0.7", optional = true}
torchvision = {version = ">=0.10.0", optional = true}

[tool.poetry.extras]
tools = [ "kwcoco", "matplotlib" ]
docker = [ "transformers", "timm", "matplotlib", "torchvision" ]

# :auto dev-linting:
# Linting
[tool.poetry.group.dev-linting]
optional = true

[tool.poetry.group.dev-linting.dependencies]
flake8 = ">=6"
flake8-mutable = ">=1.2.0"
pyproject-flake8 = ">=6"
mypy = ">=0.991,!=1.11.0"
pre-commit = ">=2.20"
ruff = "^0.1.0"
types-setuptools = ">=65.6.0.1"
black = {version = ">=24.3.0", extras=["jupyter"]}
sphinx-lint = ">=1.0.0"
# :auto dev-linting:
types-Pillow = ">=9.0"
types-tqdm = ">=4.64"

# :auto dev-docs:
# Docs
[tool.poetry.group.dev-docs]
optional = true

[tool.poetry.group.dev-docs.dependencies]
Sphinx = ">=5.3.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = ">=1.1.1"
sphinx-prompt = ">=1.5.0"
sphinx-click = ">=5.0.0"
livereload = ">=2.6.3"
# :auto dev-docs:

# :auto dev-testing:
# Testing
[tool.poetry.group.dev-testing]
optional = true

[tool.poetry.group.dev-testing.dependencies]
coverage = ">=6.5.0"
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
syrupy = ">=4.0.0"
# Jupyter notebook testing
notebook = ">=7.0.7"
papermill = ">=2.4.0"
# :auto dev-testing:
# maite protocol testing
maite = { version = "^0.6.0", extras = ["test"] }


[tool.poetry.scripts]
sal-on-coco-dets = "xaitk_jatic.utils.bin.sal_on_coco_dets:sal_on_coco_dets"

[tool.poetry.plugins."smqtk_plugins"]


# :auto pytest:
[tool.pytest.ini_options]
addopts = [
    "-lv",                              # Show local in trace-backs.
    "--doctest-modules",                # Increased verbosity.
    "--tb=long",                        # Trace-back print mode.
    "--cov=./src/xaitk_jatic",          # Cover our package specifically
    "--cov=./tests",                    # Also cover our tests for dead spots
    "--cov-report=term",                # Coverage report to terminal
    "--cov-report=xml:coverage.xml",    # for external tool reporting
]
testpaths = [
    "tests",
    "src/xaitk_jatic",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
# :auto pytest:

# :auto flake8:
[tool.flake8]
exclude = [
    "__pycache__",
    ".eggs",
    ".venv",
    "docs",
    "scripts"
]
# While a max length of 79 is encouraged, sometimes going over makes more sense
# for overall clarity.
max-line-length = 120
# :auto flake8:

# :auto black:
[tool.black]
# The regular expression pattern must be written as a single line;
# otherwise pytest-black fails to exclude the folders. For details see
# https://github.com/shopkeep/pytest-black/issues/36
exclude = '(/(\.git|.venv|.eggs|docs|scripts$)/)'
line-length = 120
# :auto black:

# :auto ruff:
[tool.ruff]
select = ["E", "W", "F", "I", "D", "A", "B", "N", "YTT", "C4", "PT"]
line-length = 120

ignore = [
    # -- Ignore these rules, since they contradict our coding standards
    "C408",  # JATIC guidelines prefer "list()", rather than "[]", to create an empty list
    "C416",  # JATIC guidelines prefer "dict()", rather than "{}", to create an empty dict
    # -- Ignoring these "Missing Docstring" errors for now, we will fix later
    "D100", "D101", "D102", "D103", "D104", "D105", "D107"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.ruff.isort]
known-first-party = ["xaitk_jatic"]
# :auto ruff:

# :auto mypy:
[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = false
incremental = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
# :auto mypy:
